Fixed scrollbar css

--- a/src/App.css
+++ b/src/App.css
@@ -177,8 +177,11 @@ img.cond-code {
 @media (min-width: 480px) {
   .forecasts {
     display: flex;
-    overflow-x: scroll;
     padding-bottom: 16px;
+    white-space:nowrap;
+    overflow-x: scroll;
+    overflow-y: hide;
+	-webkit-overflow-scrolling:touch;
   }
 
   .card {
